start screen mobile overflow fix

--- a/stylesheets/start_game.css
+++ b/stylesheets/start_game.css
@@ -10,7 +10,7 @@
   position: absolute;
   display: block;
   width: 100vw;
-  height: 101vh;
+  height: 100vh;
   object-fit: cover;
 }
 
